--- a/front-end/index-fi.html
+++ b/front-end/index-fi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project-Sirpa-01</title>
+    <title>Sirpa-Tuomaala-Art</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -32,8 +32,8 @@
             </ul>
             <!-- Navigation -->
             <div class="lang">
-              <a href="./index.html" class="btn btn-en">EN</a>
-              <a href="#!" class="btn btn-fi">FI</a>
+              <a href="./index.html" class="btn btn-en">English</a>
+              <a href="#!" class="btn btn-fi">Suomeksi</a>
             </div>
           </nav>
 
