--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project-Sirpa-01</title>
+    <title>Sirpa-Tuomaala-Art</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -30,10 +30,10 @@
               <li><a href="">Blogs</a></li>
               <li><a href="">Contact</a></li>
             </ul>
-            <!-- Navigation -->
+            <!-- Languages -->
             <div class="lang">
-              <a href="#!" class="btn btn-en">EN</a>
-              <a href="./index-fi.html" class="btn btn-fi">FI</a>
+              <a href="#!" class="btn btn-en">English</a>
+              <a href="./index-fi.html" class="btn btn-fi">Finnish</a>
             </div>
           </nav>
 
